frigate/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  namespace: default
spec:
  selector:
    matchLabels:
      app: frigate
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: frigate
    spec:
      runtimeClassName: nvidia
      containers:
      - name: frigate
        image: ghcr.io/blakeblackshear/frigate:stable
        imagePullPolicy: Always
        securityContext:
          privileged: true
        resources:
          limits:
            cpu: 3000m
            memory: 2Gi
        ports:
        - name: http
          containerPort: 5000
          protocol: TCP
        - name: rtmp
          containerPort: 1935
          protocol: TCP 
        volumeMounts:
        - mountPath: /tmp/conf/config.yml
          subPath: config.yml
          name: frigateconfigfile
        - mountPath: /config
          name: frigate-config
        - mountPath: /media/frigate
          name: frigate-recordings
        - mountPath: /dev/shm
          name: cache-volume
        - mountPath: /dev/bus/usb
          name: coral-dev
        lifecycle:
          postStart:
            exec:
              command:
                - "/bin/sh"
                - "-c"
                - "cp /tmp/conf/config.yml /config/config.yml"
        livenessProbe:
          httpGet:
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 20
          failureThreshold: 5
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 20
          failureThreshold: 5
          timeoutSeconds: 10
        startupProbe:
          httpGet:
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          failureThreshold: 30
          periodSeconds: 10

      volumes:
      - name: frigate-config
        persistentVolumeClaim:
          claimName: frigate-config-pvc
      - name: frigate-recordings
        nfs:
          server: 10.10.9.14
          path: "/mnt/Storage/cctv"
      - name: cache-volume
        emptyDir:
          medium: Memory
          sizeLimit: 1Gi
      - name: frigateconfigfile
        configMap: 
          name: frigate-config-file
      - name: coral-dev
        hostPath:
          path: /dev/bus/usb
      dnsConfig:
        options:
        - name: ndots
          value: "2"
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Exists"
        effect: "NoSchedule"
