frigate/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: cctv.sancaktar.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frigate-service    
            port:
              number: 80
